[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
reqwest = { version = "0.11.22"}
tokio = { version = "1.34.0", features = ["full", "sync", "net"] }
clap  = { version = "4.4.8", features = ["derive"] }
matches = "0.1.10"
lazy_static = "1.4.0"
regex = "1.10.2"
rayon = "1.8.0"
time = "0.3.30"
num = "0.4.1"
unreachable = "1.0.0"